# claude-code-openai-wrapper

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check-sdk-version.yml  ci.yml  claude.yml
.hypothesis/constants/: 0b9f5d19f0cc2503  1592681e34a69c28  1d2c6cf78e4a0d3b  24fcd0f4bf56b6a5  3bedde4e911abb67  49266abea451322c  4bfa246f2ad136a7  5a015d1988280896  5eace2102a943108  5ec5250a39fbf461  5ecb8d27c15539fb  5f1ff972bb16d351  5fa7e22095c251de  62961dda076a1c18  6720b331c8de2f4d  6945d5fe75d7baf9  6a1bdddafd3867b0  6c388abca123fca7  6f4af6e3fb4bf935  7c2b91b3ea4d5bae  7cbb728ba70d01ef  8147e68ddedfd20b  8c6b3f1674b9e0fe  92d90c488a56ada0  9adb793441356481  a282b0de12e1165d  a560162a0935d261  addbf4cc0fd2c0d3  b557a9a709d4c7cf  ba3ef7c1e31eb53a  c2ebc0a232bcf5ab  c6b66dd364db4aea  cc377c555d1180c1  cd8780436271eddb  cfb85dbb9b5d85a6  d14c45ee4f738a0e  d434e96105f62824  d84afc418365a945  db4f54cef59f98f2  dea42edc03d45162  (+6 more)
docs/: MIGRATION_STATUS.md  UPGRADE_PLAN.md
src/: __init__.py  auth.py  circuit_breaker.py  claude_cli.py  constants.py  cost_tracker.py  cpu_watchdog.py  function_calling.py  main.py  message_adapter.py  model_service.py  models.py  parameter_validator.py  request_cache.py  retry.py  tool_manager.py
tests/: test_anthropic_messages.py  test_auth_unit.py  test_circuit_breaker_unit.py  test_claude_cli_unit.py  test_cost_tracker_unit.py  test_cpu_watchdog_unit.py  test_dynamic_models.py  test_endpoints.py  test_error_path_unit.py  test_fence_stripper_unit.py  test_function_calling_unit.py  test_json_format_unit.py  test_log_format_unit.py  test_message_adapter_unit.py  test_model_service_unit.py  test_models_unit.py  test_redos_safety.py  test_request_cache_unit.py  test_retry_unit.py  test_sdk_migration.py  test_session_complete.py  test_tool_manager_unit.py
