[tool.poetry]
name = "claude-code-openai-wrapper"
version = "2.9.10"
description = "OpenAI API-compatible wrapper for Claude Code"
authors = ["Richard Atkinson <richardatk01@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# fastapi floor raised to >=0.133.1 so the transitive starlette floor can
# reach >=1.0.1 (GHSA-86qp-5c8j-p5mr Host-header path poisoning). fastapi
# <=0.132.x caps starlette at <1.0.0; 0.133.1 is the first release to drop
# that cap. Range stays under the next major.
fastapi = ">=0.133.1,<1.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
python-dotenv = "^1.2.2"
httpx = "^0.27.2"
sse-starlette = "^2.1.3"
python-multipart = "^0.0.27"
# Pin the SDK exactly. Bump deliberately and regenerate poetry.lock in the
# same commit so Docker builds stay reproducible. 2.9.0 bump from 0.1.18 to
# 0.1.65 to pull in 47 patch releases worth of CLI fixes aimed at the
# silent `error_during_execution` path observed on 2.8.2.
claude-agent-sdk = {version = "0.2.106", extras = ["otel"]}
slowapi = "^0.1.9"

# Security floors for transitive dependencies. Each one pinned here is a
# CVE that showed up in a trivy HIGH/CRITICAL scan against a prior build
# image and has no fix until the transitive version is advanced past the
# vulnerable one. Poetry resolves these against the rest of the graph and
# fails the lock step if they're incompatible with their parents, which is
# the early warning we want for each dep bump.
# - starlette: requires fastapi >=0.133.1 to allow >=1.0.1
#   (GHSA-86qp-5c8j-p5mr Host-header validation gap poisons request.url.path)
# - urllib3: httpx 0.27.x pulls via requests/certifi chain
#   (>=2.7.0 closes GHSA-qccp-gfcp-xxvc proxy redirect header leak and
#    GHSA-mf9v-mfxr-j63j decompression-bomb safeguard bypass)
# - cryptography, PyJWT, Authlib, mcp: via claude-agent-sdk 0.1.18
# - nltk: via the bundled claude CLI
starlette = ">=1.0.1"
urllib3 = ">=2.7.0"
cryptography = ">=46.0.5"
pyjwt = ">=2.12.0"
authlib = ">=1.6.9"
mcp = ">=1.23.0"
nltk = ">=3.9.3"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
requests = "^2.33.0"
openai = "^1.0.0"
pytest-cov = "^7.0.0"
mypy = "^1.14.0"
bandit = "^1.8.0"
safety = "^3.2.0"
hypothesis = "^6.122.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.poetry.scripts]
claude-wrapper = "src.main:run_server"